added social media icon

--- a/index.html
+++ b/index.html
@@ -56,5 +56,20 @@
         </div>
       </div>
     </main>
+    <footer>
+      <ul>
+        <li>
+          <a href=https://www.linkedin.com/in/aneudy-adames-600441158/" target='_blank'><i class="fab fa-linkedin"></i></a>
+        </li>
+        <li>
+          <a href="https://github.com/aneudya4" target='_blank'><i class="fab fa-github-square"></i></a>
+        </li>
+      </ul>
+    </footer>
+  </main>
+  <script
+  src="https://kit.fontawesome.com/4fbeabb42e.js"
+  crossorigin="anonymous"
+></script>
   </body>
 </html>
